--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ nav .nav-links a.selected{
     width: 100%;
 }
 
+.main .info .socials{
+    display: flex; /* Use flexbox */
+    align-items: center; /* Center items vertically */
+    gap: 20px;
+}
+
 .main .info button,
 .content .post-list .post-item .buttons button{
     padding: 10px 30px;
@@ -96,6 +102,17 @@ nav .nav-links a.selected{
     border-radius: 12px;
     cursor: pointer;
     transition: background 0.3s ease;
+}
+
+.main .info .socials a{
+    font-size: 40px;
+    line-height: 0;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.main .info .socials a:hover{
+    color: #303f9f;
 }
 
 .main .info button:hover,
@@ -456,6 +473,7 @@ footer p{
     width: 300px;
     height: 300px;
     border-radius: 20px;
+    background-color: #fff;
 }
 
 .content .container h2{
